# ha-tcl-lyon

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
custom_components/tcl_lyon/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  gtfs.py  manifest.json  sensor.py  siri.py  store.py  strings.json
custom_components/tcl_lyon/data/: README.md
custom_components/tcl_lyon/translations/: en.json  fr.json
images/: 7-disruption-example.yaml
scripts/: build_index.py  deploy.ps1  make_brand.py
tests/: conftest.py  test_binary_sensor.py  test_client.py  test_config_flow.py  test_coordinator.py  test_gtfs.py  test_sensor.py  test_siri.py
tests/fixtures/: estimated_timetables.json  situation_exchange.json
