[project]
name = "ha-tcl-lyon"
version = "0.1.0"
description = "Home Assistant integration for the TCL (Lyon) public transport network."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Jeremy" }]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "UP",       # pyupgrade
  "B",        # flake8-bugbear
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts ok in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
